package Creational.Builder;

public interface CommissionDTO {
    String getDescription();
    Client getClient();
    Vehicle getVehicle();
}
